--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple Counter App</title>
+    <title>Counter Until 10</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="counter-container">
-        <h1>Counter App</h1>
-        <h2 id="count">0</h2>
-
-        <div class="buttons">
-            <button id="decrease">Decrease</button>
-            <button id="reset">Reset</button>
-            <button id="increase">Increase</button>
-        </div>
+    <div class="container">
+        <h1>Counter (Stops at 10)</h1>
+        <h2 id="counter">0</h2>
+        <button id="startBtn">Start</button>
     </div>
 
     <script src="script.js"></script>
