--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Counter App (Limit 10)</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Counter App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Counter App (Max 10)</h1>
-    <h2 id="count">0</h2>
-
-    <button onclick="increase()">+</button>
-    <button onclick="decrease()">-</button>
-    <button onclick="reset()">Reset</button>
+    <div class="counter-card">
+        <h2 id="counter-value">0</h2>
+        <p id="limit-msg"></p>
+        
+        <div class="controls">
+            <button id="decrement">-</button>
+            <button id="reset">Reset</button>
+            <button id="increment">+</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
