--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter App</title>
+    <title>Limited Counter App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="counter-card">
-        <h2 id="counter-value">0</h2>
-        <p id="limit-msg"></p>
+    <div class="counter-container">
+        <h1 id="counter-value">0</h1>
+        <p id="status-message"></p>
         
-        <div class="controls">
-            <button id="decrement">-</button>
-            <button id="reset">Reset</button>
-            <button id="increment">+</button>
+        <div class="button-group">
+            <button id="btn-decrement">-</button>
+            <button id="btn-reset">Reset</button>
+            <button id="btn-increment">+</button>
         </div>
     </div>
 
