--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="counter-container">
-        <h1 id="counter-value">0</h1>a
+        <h1 id="counter-value">0</h1>
         <p id="status-message"></p>
         
         <div class="button-group">
