--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Limited Counter App</title>
+    <title>Counter App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="counter-container">
-        <h1 id="counter-value">0</h1>
-        <p id="status-message"></p>
+    <div class="card">
+        <h1 id="number">0</h1>
+        <p id="alert"></p>
         
-        <div class="button-group">
-            <button id="btn-decrement">-</button>
-            <button id="btn-reset">Reset</button>
-            <button id="btn-increment">+</button>
+        <div class="buttons">
+            <button id="minus">-</button>
+            <button id="reset">Reset</button>
+            <button id="plus">+</button>
         </div>
     </div>
 
